zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__shrink_whole_tab_with_floating_panes_horizontally_and_vertically.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ────────────────────┌ ┌ ┌ Pane #4 ── 0 ┐                                                                       
01 (C): │                             │ │E│EEEEEEEEEEEEEE│                                                                       
02 (C): │ ┌ Pane #5 ───── SCROLL:  0/1 | PIN [ ] ┐EEEEEEE│                                                                       
03 (C): │ │EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE│       │                                                                       
04 (C): │ │E┌ Pane #6 ───── SCROLL:  0/1 | PIN [ ] ┐EEEEE│                                                                       
05 (C): │ │E│EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE│EEEEE│                                                                       
06 (C): │ │E│EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE│EEEEE│                                                                       
07 (C): │ └─│EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE│EEEEE│                                                                       
08 (C): │   │EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE│     │                                                                       
09 (C): └───└──────────────────────────────────────┘─────┘                                                                       
10 (C):                                                                                                                          
11 (C):                                                                                                                          
12 (C):                                                                                                                          
13 (C):                                                                                                                          
14 (C):                                                                                                                          
15 (C):                                                                                                                          
16 (C):                                                                                                                          
17 (C):                                                                                                                          
18 (C):                                                                                                                          
19 (C):
