zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__single_pane_titles_frame_style_omits_title_row.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 15755
expression: snapshot
---
00 (C): I am a single pane                      
01 (C):                                         
02 (C):                                         
03 (C):                                         
04 (C):                                         
05 (C):
