zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__single_pane_top_only_frame_style_draws_title_row.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C):  Pane #1 ───────────────── [ able-ant ] 
01 (C): I am a single pane                      
02 (C):                                         
03 (C):                                         
04 (C):                                         
05 (C):
